# super-segment

./: .dockerignore  .gitignore  Dockerfile  README.md  config.toml  justfile  maths.md  metrics.md  pyproject.toml
app/: main.py  main.py.PREV
conf/: app_config.toml  config.yaml  generate.toml  generate.yaml  transform.toml  ui.toml
conf_dagster/: clustering.yaml  config.yaml  data.yaml  features.yaml
conf_yaml/: config.yaml  generate.yaml  transform.yaml  ui.yaml
data/: members.parquet
docs/: maths.md  metrics.md  segment.md
member_data_pipeline/: README.md  pyproject.toml  setup.cfg  setup.py
member_data_pipeline/member_data_pipeline/: assets.py  definitions.py
notebooks/: kmeans-demo.py  mo_check_main.py
scripts/: duckdb_check.py  generate_member_data.py  generate_member_data_IBIS_notworking.py
src/super_churn/: config.py  data_generation.py  datastore.py  model.py
src/super_segment/: app_config.py  app_config.py.OFF  data_generation.py  hydra_conf.py  model.py  project_config.py  utils.py
tests/: test_app_config.py  test_datastore.py  test_feature_generators.py  test_main.py  test_member_data_generator.py  test_super_segment_model.py
