[project]
name = "super-segment"
version = "0.1.0"
description = "Super member segmentation"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-webserver",
    "duckdb",
    "faker",
    "hydra-core",
    "ibis-framework[duckdb]>=10.5.0",
    "logfire>=3.16.0",
    "loguru",
    "matplotlib",
    "millify",
    "pandas",
    "plotly",
    "scikit-learn",
    "seaborn",
    "statsmodels",
    "streamlit",
    "watchdog",
]

[dependency-groups]
dev = ["marimo>=0.13.10", "pytest>=8.3.5"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
