[project]
name = "super-segment"
version = "0.1.2"
description = "Super member segmentation"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "duckdb",
    "faker",
    "logfire>=3.16.0",
    "loguru",
    "matplotlib",
    "pandas",
    "plotly",
    "python-dotenv>=1.1.0",
    "scikit-learn",
    "seaborn",
    "statsmodels",
    "streamlit",
    "watchdog",
]

[dependency-groups]
dev = [
    "marimo>=0.13.10",
 "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
